manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-kubernetes-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-kubernetes
  template:
    metadata:
      labels:
        app: simple-kubernetes
    spec:
      containers:
        - name: simple-kubernetes
          image: lkuzmicheva/simple-kubernetes:0.1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
