manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-kubernetes-service
spec:
  selector:
    app: simple-kubernetes
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
