manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-kubernetes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/kuzmicheva($|/)(.*)
          backend:
            serviceName: simple-kubernetes
            servicePort: 9000
